# rdrand

./: .rdrand.c.un~  .readthedocs.yml  .setup.py.un~  LICENSE  README.md  README.txt  distutils.cfg  pyproject.toml  rdrand.c  rdrand.py  rdrandom.rst  setup.cfg  setup.py  setup.py~
docs/: Makefile  conf.py  index.rst
