[metadata]
name = rdrand
version = 1.5.0
description = Python interface to Intel hardware rng
long_description = file: rdrandom.rst
author = Chris Stillson
author_email = stillson@gmail.com
url = https://github.com/stillson/rdrand
license = New BSD license
keywords = rdrand, rdseed, intel, hardware, random, number, generator, rng
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Security
    Topic :: Security :: Cryptography

[options]
py_modules = rdrand

[build]
compiler = mingw32
